# yashandb-go

./: .gitignore  .gitmodules  CMakeLists.txt  DSNFormat.md  README.md  build.py  commons.go  commons_test.go  conn.go  connection.go  connector.go  driver.go  dsn.go  dsn_test.go  errors.go  go.mod  go.sum  linux_offline.md  linux_online.md  middle.go  offlineVersionInstructions.md  onlineVersionInstructions.md  plsql_debug.go  plsql_debug_inout_test.go  plsql_debug_test.go  require.go  result.go  rows.go  sql_base_test.go  sql_bool_test.go  sql_byte_test.go  sql_conn_test.go  sql_date_test.go  sql_go_test.go  sql_nclob_test.go  sql_null_test.go  sql_number_test.go  sql_raw._test.go  sql_row_test.go  sql_string_test.go  (+16 more)
_examples/: dsn.go
_examples/bind/: main.go
_examples/blob/: main.go
_examples/clob/: main.go
_examples/compat_vector/: main.go
_examples/context/: main.go
_examples/date/: main.go
_examples/emoji/: main.go
_examples/int/: main.go
_examples/null/: main.go
_examples/number/: main.go
_examples/plsql/: main.go
_examples/raw/: main.go
_examples/simple/: main.go
_examples/sqlout/: main.go
_examples/sqlx/: go.mod  main.go
_examples/xml/: main.go
assert/: assert.go
example/: defaultDsn.json  dsn.go
example/blob/: main.go
include/: yacapi.h
src/: yapi_cli.c  yapi_conn.c  yapi_env.c  yapi_inc.h  yapi_infr.c  yapi_pldebug.c  yapi_stmt.c
test/: CMakeLists.txt  yapi_test.c
tests/: base_test.go  conn_test.go  go.mod  tx_test.go
yacapi/: .clang-format  .gitignore  README.md
yacapi/test/: CMakeLists.txt  yapi_test.c
(+21 files in other folders)
