cmake_minimum_required(VERSION 3.16)
project(yacapi)

set(YAS_ODBC_MAJOR_VERSION 0x00)
set(YAS_ODBC_MINOR_VERSION 0x01)
set(YAS_ODBC_PATCH_VERSION 0x01)

include(CheckIncludeFiles)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(BUILD_USE_64BITS on)
set(CMAKE_CONFIGURATION_TYPES "Debug" CACHE STRING "")
set(CMAKE_BUILD_TYPE "Debug" CACHE STRING "")

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

set(LOGO_SOURCE_DIR ${PROJECT_SOURCE_DIR}/src/config/res)

add_subdirectory(test)